--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,8 @@ set(ITK_TEST_DRIVER itkTestDriver)
 set(TextureFeaturesTests ScalarImageToRunLengthFeaturesImageFilterCreationTest.cxx
                          ScalarImageToRunLengthFeaturesImageFilterTest.cxx
                          ScalarImageToRunLengthFeaturesImageFilterTestSeparateFeatures.cxx
-                         ScalarImageToRunLengthFeaturesImageFilterTestWithoutMask.cxx)
+                         ScalarImageToRunLengthFeaturesImageFilterTestWithoutMask.cxx
+                         ScalarImageToRunLengthFeaturesImageFilterTestWithVectorImage.cxx)
 
 set(TestOutput ${ITK_TEST_OUTPUT_DIR})
 
@@ -17,6 +18,20 @@ CreateTestDriver(TextureFeatures "${TextureFeatures-Test_LIBRARIES}" "${TextureF
 itk_add_test(NAME ScalarImageToRunLengthFeaturesImageFilterCreationTest
   COMMAND TextureFeaturesTestDriver
 ScalarImageToRunLengthFeaturesImageFilterCreationTest)
+
+itk_add_test(NAME ScalarImageToRunLengthFeaturesImageFilterVectorlImage1
+  COMMAND TextureFeaturesTestDriver
+  --compare  DATA{${INPUTDATA}/resultPartialImage1.nrrd}
+             ${TEMP}/resultVectorImage1.nrrd
+  ScalarImageToRunLengthFeaturesImageFilterTestWithVectorImage
+  DATA{${INPUTDATA}/Scan_CBCT_13R_D1_crop.nrrd}
+  DATA{${INPUTDATA}/SegmC_CBCT_13R_D1_crop.nrrd}
+  ${TEMP}/resultVectorlImage1.nrrd
+  10
+  0 4200
+  0 0.7
+  2)
+
 
 itk_add_test(NAME ScalarImageToRunLengthFeaturesImageFilterTestWithoutMask1
   COMMAND TextureFeaturesTestDriver
@@ -53,6 +68,20 @@ itk_add_test(NAME ScalarImageToRunLengthFeaturesImageFilterTestWithoutMask3
   0 4200
   0 1.8
   6)
+
+
+itk_add_test(NAME ScalarImageToRunLengthFeaturesImageFilterVectorImage2
+  COMMAND TextureFeaturesTestDriver
+  --compare  DATA{${INPUTDATA}/resultPartialImage2.nrrd}
+             ${TEMP}/resultVectorImage2.nrrd
+  ScalarImageToRunLengthFeaturesImageFilterTestWithVectorImage
+  DATA{${INPUTDATA}/Scan_CBCT_13R_D1_crop.nrrd}
+  DATA{${INPUTDATA}/SegmC_CBCT_13R_D1_crop.nrrd}
+  ${TEMP}/resultVectorImage2.nrrd
+  10
+  0 4200
+  0 1.25
+  4)
 
 itk_add_test(NAME ScalarImageToRunLengthFeaturesImageFilterPartialImage1
   COMMAND TextureFeaturesTestDriver
