ENH: Add test from Gaussian distributed samples
Added new test, which uses Google Test, that runs the first order
feature filter on a generated Gaussian sample. This enables validation
of the results based on the expected values from a Gaussian sample. To
compute the tolerance, numpy was used to generate 10,000 Gaussian
distributions, where the distribution of the statistics where
examined. The expected entropy values is computed from expected 101^2
unique samples. A fix seed is used to ensure a repeatable distribution
is generated.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -250,3 +250,9 @@ itk_add_test(NAME itkFirstOrderTextureFeaturesImageFilterTest1
           ${ITK_TEST_OUTPUT_DIR}/itkTextureFeatureImageFilterTest1.mha
           5
       )
+
+set(TextureFeaturesGTests
+  itkFirstOrderTextureFeaturesImageFilterGTest.cxx
+)
+
+CreateGoogleTestDriver(TextureFeatures "${TextureFeatures-Test_LIBRARIES}" "${TextureFeaturesGTests}")
